--- a/Dnc.BookStore/Views/Book/GetBooks.cshtml
+++ b/Dnc.BookStore/Views/Book/GetBooks.cshtml
@@ -1,13 +1,12 @@
-﻿@model IEnumerable<Dnc.BookStore.Model.BookModel>
-@{
-    ViewData["Title"] = "GetBooks";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+﻿@{
+    ViewBag.Title = "All Books";
 }
+@model IEnumerable<BookModel>
 @section Title{
     <div class="breadcrumb text-muted">
         <div class="breadcrumb-item active"><a href="/">Home</a></div>
         <div class="breadcrumb-item">All Books</div>
-    </div>   
+    </div>
 }
 
 <div class="container">
@@ -28,7 +27,7 @@
                         </p>
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
-                                <a href="/book/getbook/@book.Id" class="btn btn-sm btn-outline-secondary">Details</a>
+                                <a asp-controller="book" asp-action="getbook" asp-route-id="@book.Id" class="btn btn-sm btn-outline-secondary">Details</a>
                             </div>
                             <small class="text-muted">@book.Author</small>
                         </div>
