--- a/Dnc.BookStore/Views/Home/AboutUs.cshtml
+++ b/Dnc.BookStore/Views/Home/AboutUs.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    Layout = "_Layout";
+    ViewBag.Title = "About Us";
 }
 <div class="container" style="margin-top:100px;">
     <section class="card shadow">
