--- a/Dnc.BookStore/Views/Home/ContactUs.cshtml
+++ b/Dnc.BookStore/Views/Home/ContactUs.cshtml
@@ -1,8 +1,8 @@
 ﻿@{
-    Layout = "_Layout";
+    ViewBag.Title = "Contact Us";
 }
 <div class="container" style="margin-top:100px;">
-     
+
     <section class="card shadow">
         <div class="card-body">
             <div class="card-title">
@@ -15,6 +15,6 @@
             </div>
         </div>
     </section>
-   
+
 </div>
 
