--- a/Dnc.BookStore/Views/Home/Index.cshtml
+++ b/Dnc.BookStore/Views/Home/Index.cshtml
@@ -1,10 +1,12 @@
-﻿@{
-    Layout = "_Layout";
-}
-
+﻿@*@{ 
+    ViewBag.Title = "Home";
+}*@
 <section class="jumbotron text-center">
     <div class="container">
-        <h1>Welcome to Book Store</h1>
+        @{ 
+            var data = ViewBag.Data;
+        }
+        <h1>Welcome to Book Store @ViewBag.Data.Title</h1>
         <p class="lead text-muted">
            search your books of interest and read onling or offline
         </p>
