--- a/Dnc.BookStore/Views/Home/ContactUs.cshtml
+++ b/Dnc.BookStore/Views/Home/ContactUs.cshtml
@@ -6,7 +6,7 @@
     <section class="card shadow">
         <div class="card-body">
             <div class="card-title">
-                Email - bookstore@gmail.com
+                Email - @@<custom-email email="ravi.kewat@gmail.com"></custom-email>
 
             </div>
             <div class="card-title">
