--- a/Dnc.BookStore/Views/Book/GetBook.cshtml
+++ b/Dnc.BookStore/Views/Book/GetBook.cshtml
@@ -1,31 +1,60 @@
 ﻿@*@{
-    ViewBag.Title = "Book Detail - " + Model.bookDetail.Title;
-}*@
-@using Dnc.BookStore.Enums; 
+        ViewBag.Title = "Book Detail - " + Model.bookDetail.Title;
+    }*@
+@using Dnc.BookStore.Enums;
 @*@model BookModel*@
 
 <div class="container">
     <h3 class="display-4">
         Book Details
     </h3>
+
+    <!-- Modal -->
+    <div class="modal fade" id="exampleModalLong" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+        <div class="modal-dialog" role="document" style="height:100%">
+            <div class="modal-content" style="width:100%; height:100%">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLongTitle">@Model.bookDetail.Title</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body" style="width:100%; height:100%">
+                    <iframe src="@Model.bookDetail.BookPdfUrl" style="width:100%; height:100%"></iframe>
+                </div>               
+            </div>
+        </div>
+    </div>
+
     <div class="row">
         <div class="col col-md-6">
             <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
                 <ol class="carousel-indicators">
-                    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                    @for (int i = 0; i < Model.bookDetail.BookGalleries.Count; i++)
+                    {
+                        <li data-target="#carouselExampleIndicators" data-slide-to="@i" class="@(i==0? "active":"")"></li>
+                    }
+                    @*<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>*@
                 </ol>
+
                 <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img src="~/images/booksnapshot1.png" class="d-block w-100" alt="...">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="~/images/booksnapshot2.png" class="d-block w-100" alt="...">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="~/images/booksnapshot1.png" class="d-block w-100" alt="...">
-                    </div>
+                    @for (int i = 0; i < Model.bookDetail.BookGalleries.Count; i++)
+                    {
+                        <div class="@(i==0 ? "carousel-item active": "carousel-item")">
+                            <img src="@Model.bookDetail.BookGalleries[i].Url" class="d-block w-100" alt="@Model.bookDetail.BookGalleries[i].Name">
+                        </div>
+                    }
+                    @*<div class="carousel-item active">
+                            <img src="~/images/booksnapshot1.png" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="~/images/booksnapshot2.png" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="~/images/booksnapshot1.png" class="d-block w-100" alt="...">
+                        </div>*@
                 </div>
                 <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -59,9 +88,9 @@
 
             <div class="row">
                 <div class="col-md-4">
-                    <button class="btn btn-outline-primary">Read now..</button>
+                    <a class="btn btn-outline-primary" data-toggle="modal" data-target="#exampleModalLong">Read now..</a>
                 </div>
-                <small class="text-muted" ><a asp-fragment="similarBooks">See all similar books</a></small>
+                <small class="text-muted"><a asp-fragment="similarBooks">See all similar books</a></small>
             </div>
             <hr />
 
@@ -90,7 +119,7 @@
                 <div class="col col-md-4">
                     <div class="card mb-4 shadow">
                         <div class="card-body">
-                            <svg class="card-img-top" style="background-color:grey;"></svg>
+                            <img href="@book.BookCoverUrl" class="img-thumbnail" />
                             <span class="card-text">
                                 @book.Title
                             </span>
