--- a/Dnc.BookStore/Views/Book/AddBook.cshtml
+++ b/Dnc.BookStore/Views/Book/AddBook.cshtml
@@ -5,8 +5,14 @@
 @model BookModel
 <div class="container">
     <h3 class="display-4">Add New book</h3>
+
     
-    @if (ViewBag.IsSuccess==true)
+    <div class="align-items-center" id="#loader" style="display:none;">
+        <strong>Loading...</strong>
+        <div class="spinner-border ml-auto" role="status" aria-hidden="true"></div>
+    </div>
+
+    @if (ViewBag.IsSuccess == true)
     {
         <div class="alert alert-success alert-dismissible fade show" role="alert">
             <strong>Success!</strong> You can check newly add book details.
@@ -18,78 +24,78 @@
     }
     <hr />
     @*novalidate to stop validation from HTML 5*@
-<form method="post" asp-controller="book" asp-action="addbook" enctype="multipart/form-data" novalidate>
-    <div asp-validation-summary="ModelOnly" class="text-danger">
-    </div>
-    @*<div class="form-group">
-            <label asp-for="Language"></label>
-            <select asp-for="Language" class="form-control" asp-items="ViewBag.Languages">
-                <option value="">Please choose book language</option>
+    <form method="post" data-ajax="true" data-ajax-loading="#loader" asp-controller="book" asp-action="addbook" enctype="multipart/form-data">
+        <div asp-validation-summary="ModelOnly" class="text-danger">
+        </div>
+        @*<div class="form-group">
+                <label asp-for="Language"></label>
+                <select asp-for="Language" class="form-control" asp-items="ViewBag.Languages">
+                    <option value="">Please choose book language</option>
+                </select>
+                <span asp-validation-for="Language" class="text-danger"></span>
+            </div>*@
+        <div class="form-group">
+            <label asp-for="MultiLanguage"></label>
+            <select asp-for="MultiLanguage" asp-items="ViewBag.Languages" class="form-control" multiple>
+                <option value="">please select languages</option>
             </select>
-            <span asp-validation-for="Language" class="text-danger"></span>
-        </div>*@
-    <div class="form-group">
-        <label asp-for="MultiLanguage"></label>
-        <select asp-for="MultiLanguage" asp-items="ViewBag.Languages" class="form-control" multiple>
-            <option value="">please select languages</option>
-        </select>
-        <span asp-validation-for="MultiLanguage" class="text-danger"></span>
-    </div>
-    <div class="form-group">
-        <label asp-for="Category"></label>
-        <select asp-for="Category" asp-items="Html.GetEnumSelectList<CategoryEnum>()" class="form-control">
-            <option value="">please select category</option>
-        </select>
-        <span asp-validation-for="Category" class="text-danger"></span>
-    </div>
-    <div class="form-group">
-        <label asp-for="Title"></label>
-        <input asp-for="Title" class="form-control" />
-        <span asp-validation-for="Title" class="text-danger"></span>
-    </div>
-    <div class="form-group">
-        <label asp-for="Author"></label>
-        <input asp-for="Author" class="form-control" />
-        <span asp-validation-for="Author" class="text-danger"></span>
-    </div>
-    <div class="form-group">
-        <label asp-for="Description"></label>
-        <textarea asp-for="Description" class="form-control"></textarea>
-        <span asp-validation-for="Description" class="text-danger"></span>
-    </div>
-    <div class="form-group">
-        <label asp-for="Pages"></label>
-        <input asp-for="Pages" class="form-control" />
-        <span asp-validation-for="Pages" class="text-danger"></span>
-    </div>
-    <div class="form-group">
-        <label asp-for="BookCover"></label>
-        <input asp-for="BookCover" class="form-control" />
-        <span asp-validation-for="BookCover" class="text-danger"></span>
-    </div>
-    <div class="form-group">
-        <label asp-for="BookPdf"></label>
-        <input asp-for="BookPdf" class="form-control" />
-        <span asp-validation-for="BookPdf" class="text-danger"></span>
-    </div>
-    <div class="form-group">
-        <label asp-for="BookGallery"></label>
-        <input asp-for="BookGallery" class="form-control" />
-        <span asp-validation-for="BookGallery" class="text-danger"></span>
-    </div>
-    <div class="form-group">
-        <label asp-for="DtFieldGeneratedUsingDataType"></label>
-        <input asp-for="DtFieldGeneratedUsingDataType" class="form-control" />
-        <span asp-validation-for="DtFieldGeneratedUsingDataType" class="text-danger"></span>
-    </div>
-    <div class="form-group">
-        <label asp-for="EmailFieldGeneratedUsingDataType"></label>
-        <input asp-for="EmailFieldGeneratedUsingDataType" class="form-control" />
-        <span asp-validation-for="EmailFieldGeneratedUsingDataType" class="text-danger"></span>
-    </div>
-    <div class="form-group">
-        <input type="submit" value="Add Book" class="btn btn-primary" />
-    </div>
+            <span asp-validation-for="MultiLanguage" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+            <label asp-for="Category"></label>
+            <select asp-for="Category" asp-items="Html.GetEnumSelectList<CategoryEnum>()" class="form-control">
+                <option value="">please select category</option>
+            </select>
+            <span asp-validation-for="Category" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+            <label asp-for="Title"></label>
+            <input asp-for="Title" class="form-control" />
+            <span asp-validation-for="Title" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+            <label asp-for="Author"></label>
+            <input asp-for="Author" class="form-control" />
+            <span asp-validation-for="Author" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+            <label asp-for="Description"></label>
+            <textarea asp-for="Description" class="form-control"></textarea>
+            <span asp-validation-for="Description" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+            <label asp-for="Pages"></label>
+            <input asp-for="Pages" class="form-control" />
+            <span asp-validation-for="Pages" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+            <label asp-for="BookCover"></label>
+            <input asp-for="BookCover" class="form-control" />
+            <span asp-validation-for="BookCover" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+            <label asp-for="BookPdf"></label>
+            <input asp-for="BookPdf" class="form-control" />
+            <span asp-validation-for="BookPdf" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+            <label asp-for="BookGallery"></label>
+            <input asp-for="BookGallery" class="form-control" />
+            <span asp-validation-for="BookGallery" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+            <label asp-for="DtFieldGeneratedUsingDataType"></label>
+            <input asp-for="DtFieldGeneratedUsingDataType" class="form-control" />
+            <span asp-validation-for="DtFieldGeneratedUsingDataType" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+            <label asp-for="EmailFieldGeneratedUsingDataType"></label>
+            <input asp-for="EmailFieldGeneratedUsingDataType" class="form-control" />
+            <span asp-validation-for="EmailFieldGeneratedUsingDataType" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+            <input type="submit" value="Add Book" class="btn btn-primary" />
+        </div>
 
-</form>
+    </form>
 </div>
