--- a/Dnc.BookStore/Views/Book/GetBook.cshtml
+++ b/Dnc.BookStore/Views/Book/GetBook.cshtml
@@ -1,9 +1,4 @@
-﻿@*@{
-        ViewBag.Title = "Book Detail - " + Model.bookDetail.Title;
-    }*@
-@using Dnc.BookStore.Enums;
-@*@model BookModel*@
-
+﻿@using Dnc.BookStore.Enums;
 <div class="container">
     <h3 class="display-4">
         Book Details
@@ -21,50 +16,16 @@
                 </div>
                 <div class="modal-body" style="width:100%; height:100%">
                     <iframe src="@Model.bookDetail.BookPdfUrl" style="width:100%; height:100%"></iframe>
-                </div>               
+                </div>
             </div>
         </div>
     </div>
 
     <div class="row">
         <div class="col col-md-6">
-            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-                <ol class="carousel-indicators">
-                    @for (int i = 0; i < Model.bookDetail.BookGalleries.Count; i++)
-                    {
-                        <li data-target="#carouselExampleIndicators" data-slide-to="@i" class="@(i==0? "active":"")"></li>
-                    }
-                    @*<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>*@
-                </ol>
-
-                <div class="carousel-inner">
-                    @for (int i = 0; i < Model.bookDetail.BookGalleries.Count; i++)
-                    {
-                        <div class="@(i==0 ? "carousel-item active": "carousel-item")">
-                            <img src="@Model.bookDetail.BookGalleries[i].Url" class="d-block w-100" alt="@Model.bookDetail.BookGalleries[i].Name">
-                        </div>
-                    }
-                    @*<div class="carousel-item active">
-                            <img src="~/images/booksnapshot1.png" class="d-block w-100" alt="...">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="~/images/booksnapshot2.png" class="d-block w-100" alt="...">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="~/images/booksnapshot1.png" class="d-block w-100" alt="...">
-                        </div>*@
-                </div>
-                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Previous</span>
-                </a>
-                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Next</span>
-                </a>
-            </div>
+            @{
+                Html.RenderPartial("_carousel", Model.bookDetail.BookGalleries as IEnumerable<BookGalleryModel>);
+            }
         </div>
         <div class="col col-md-6">
             <div class="row">
@@ -107,6 +68,7 @@
             </ul>
         </div>
     </div>
+
     <hr />
 
     <div class="py-3 bg-light" id="similarBooks">
@@ -116,25 +78,7 @@
         <div class="row">
             @foreach (var book in Model.similarBooks)
             {
-                <div class="col col-md-4">
-                    <div class="card mb-4 shadow">
-                        <div class="card-body">
-                            <img href="@book.BookCoverUrl" class="img-thumbnail" />
-                            <span class="card-text">
-                                @book.Title
-                            </span>
-                            <p class="card-text">
-                                @book.Description
-                            </p>
-                            <div class="d-flex justify-content-between align-items-center">
-                                <div class="btn-group">
-                                    <a href="/book/getbook/@book.Id" class="btn btn-sm btn-outline-secondary">Details</a>
-                                </div>
-                                <small class="text-muted">@book.Author</small>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                Html.RenderPartial("_bookThumbnail", book as BookModel);
             }
         </div>
     </div>
