--- a/Dnc.BookStore/Views/Shared/_Layout.cshtml
+++ b/Dnc.BookStore/Views/Shared/_Layout.cshtml
@@ -24,67 +24,28 @@
     </environment>
 </head>
 <body>
-    <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <img src="~/images/booksnapshot2.png" asp-append-version="true" style="height:50px; width:50px;" /><a class="navbar-brand" asp-controller="home" asp-action="index"><b>@@Ur Book Store</b></a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" asp-controller="home" asp-action="index">Home <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" asp-controller="home" asp-action="aboutus">About Us</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" asp-controller="home" asp-action="contactus">Contact Us</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" asp-controller="book" asp-action="getbooks">All Books</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" asp-controller="book" asp-action="addbook">Add New Book</a>
-                    </li>
-                </ul>
-                <ul class="navbar-nav mr-sm-2">
-                    <li class="nav-item">
-                        <a class="btn btn-primary mr-sm-2" href="#">Login</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="btn btn-secondary" href="#">Register</a>
-                    </li>
-                </ul>
-                <form class="form-inline my-2 my-lg-0">
-                    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-                </form>
-            </div>
-        </nav>
-    </header>
+    
+    <partial name="_header"/>
 
     <div>
         @RenderSection("Title", required: false)
         @RenderBody()
     </div>
-    <footer class="border-top footer text-muted text-center">
-        <div class="container">
-            Copyright &copy; Ur Book Store 2020 
-                        
-        </div>
-    </footer>
+
+    <partial name="_footer"/>
+
     <environment include="Development">
         <script src="~/lib/jquery/jquery.js"></script>
         <script src="~/lib/jquery-validate/jquery.validate.js"></script>
         <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
+        <script src="~/lib/jquery-ajax-unobtrusive/jquery.unobtrusive-ajax.js"></script>
         <script src="~/lib/twitter-bootstrap/js/bootstrap.js"></script>
     </environment>
     <environment exclude="Development">
         <script src="~/lib/jquery/jquery.min.js"></script>
         <script src="~/lib/jquery-validate/jquery.validate.min.js"></script>
         <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
+        <script src="~/lib/jquery-ajax-unobtrusive/jquery.unobtrusive-ajax.min.js"></script>
         <script src="~/lib/twitter-bootstrap/js/bootstrap.min.js"></script>
     </environment>
     
