--- a/Dnc.BookStore/Views/Book/AddBook.cshtml
+++ b/Dnc.BookStore/Views/Book/AddBook.cshtml
@@ -24,7 +24,7 @@
     }
     <hr />
     @*novalidate to stop validation from HTML 5*@
-    <form method="post" data-ajax="true" data-ajax-loading="#loader" asp-controller="book" asp-action="addbook" enctype="multipart/form-data">
+    <form method="post"  asp-controller="book" asp-action="addbook" enctype="multipart/form-data">
         <div asp-validation-summary="ModelOnly" class="text-danger">
         </div>
         @*<div class="form-group">
