--- a/Dnc.BookStore/Views/Shared/_bookThumbnail.cshtml
+++ b/Dnc.BookStore/Views/Shared/_bookThumbnail.cshtml
@@ -11,7 +11,7 @@
             </p>
             <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                    <a href="/book/getbook/@Model.Id" class="btn btn-sm btn-outline-secondary">Details</a>
+                    <a asp-route="book-details" asp-route-id="@Model.Id" class="btn btn-sm btn-outline-secondary">Details</a>
                 </div>
                 <small class="text-muted">@Model.Author</small>
             </div>
